
next
----
- added method "sounds:play_random"
- added "random" play button to tests
- changed to require "prepend" to prefix sound files with "sounds_"
- fixed inheriting "prepend" attribute when concatenating SoundGroup instances with arithmetic operator
- added iSoundGroup object meant for use with sounds prefixed with "sounds_" only
- fixed length of clock_tick so loops
- renamed sounds:
	- some "ar_fire sounds" to "ar_burst"
- added sounds:
	- ar_burst
	- cicada
	- explosion
	- explosion_distant
	- explosion_scifi
	- fireworks
	- fireworks_pop
	- fuse_short
	- helicopter
	- melee_hit
	- plasma_shot
	- scrape


v1.9
----
- "sounds:play" now returns handle & sound file name string
- added "sounds:stop" wrapper function for "core:sound_stop"
- added setting "sounds.enable_tests"
- added sounds testing formspec shown with "/sounds_tests" chat command
- added localization support for sounds testing formspec
- added Spanish translation for sounds testing formspec
- added sounds:
	- ar_fire
	- fireball
	- laser
	- pistol_cock
	- pistol_fire
	- pistol_fire_dry
	- pistol_reload
	- ricochet
	- rifle_cock
	- rifle_fire
	- rifle_fire_cock
	- rifle_fire_dry
	- rifle_small_fire
	- shotgun_fire_pump
	- shotgun_pump


v1.8
----
- strings can be added to SoundGroup via arithmetic operator
- added sounds:
	- chalk_screech
	- chalk_write
	- compressor_motor
	- motorbike_idle
	- tree_creak
	- vehicle_horn


v1.7
----
- added sounds:
	- airplane_prop
	- car_motor
	- jet_ambience
	- jet_flyby
	- jet_land
	- train_whistle
	- zombie_death


v1.6
----
- added sounds:
	- door_close_02
	- door_close_03
	- door_knock
	- door_open
	- doorbell
	- fire_crackle
	- leaves
	- match_ignite
	- tool_break
	- vehicle_motor_idle
	- vomit
	- woodpecker_peck
	- woosh


v1.5
----
- added sounds:
	- balloon_inflate
	- balloon_pop
	- bicycle_bell
	- bicycle_horn
	- bicycle_spokes
	- cobra
	- dolphin_chirp
	- dolphin_click
	- door_close
	- door_creak
	- goose
	- lamb
	- laugh_evil
	- lava_cool